# django-adminlte4

./: .pre-commit-config.yaml  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
django_adminlte/: apps.py  urls.py
django_adminlte/templates/adminlte/: base.html
django_adminlte/templates/adminlte/lib/: _main_footer.html  _main_header.html  _main_sidebar.html  _messages.html  _pagination.html  _scripts.html  _styles.html
django_adminlte/templatetags/: adminlte_helpers.py
docs/: conf.py  quickstart.rst
example_project/: settings.py  urls.py
example_project/app/: apps.py
example_project/app/templates/adminlte/lib/: _main_sidebar.html
