[tool.poetry]
name = "django-adminlte4"
version = "0.1.0"
description = ""
authors = ["Adam Charnock <adam@adamcharnock.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "django_adminlte" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
exclude = '''
/(
  # Defaults
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist

  | node_modules
  | migrations
)/
'''